# 42Projects

./: .gitignore  CMakeLists.txt  README.md  ft_isalnum.c  ft_isalpha.c  ft_itoa.c  ft_strlen.c  libft.h
Libft/: Makefile  ft_lstadd_front.c  ft_lstiter.c  ft_lstsize.c  ft_putstr_fd.c  ft_strlcat.c  ft_strmapi.c  ft_strrchr.c  get_next_line.c
Minitalk/: Makefile  client.c  server.c
Minitalk/Libft/: ft_putendl_fd.c
Minitalk/libft/: Makefile  ft_atoi.c  ft_isprint.c  ft_lstdelone.c  ft_lstmap.c  ft_split.c  ft_strchr.c  ft_striteri.c  ft_strlcpy.c  ft_strtrim.c
Philosophers/: Makefile
Philosophers/includes/: philosophers.h
Philosophers/libft/: ft_lstlast.c  ft_lstnew.c  ft_memcmp.c  ft_memset.c  ft_putnbr_fd.c  ft_strnstr.c  libft.h
Philosophers/sources/: forks.c  list_funks.c  main_tools.c  philosophers.c  tests.c  thread.c  thread_inner.c  time.c  validation_tools_part1.c  validation_tools_part2.c  validation_tools_part3.c
fractol/: Makefile  complex_math.c  event.c  events.c  fractal.c  fractol  fractol.h  ft_fractol.c  hooks.c  julia.c  main.c  mandelbrot.c  mini_libft.c  params.c  tools.c
fractol/libft/: ft_putchar_fd.c  ft_strrchr.c
ft_printf/: Makefile  format_c_and_s.c  format_i_and_d.c  format_p.c  format_u.c  format_x_and_X.c  ft_printf.c  ft_printf.h
get_next_line/: a.out  get_next_line.c  get_next_line.h  get_next_line_utils.c  my_plans_for_this_project.txt  test2.txt  text.txt
libft/: ft_bzero.c  ft_calloc.c  ft_isalpha.c  ft_isascii.c  ft_lstclear.c
philo/: Makefile  philo
philo/sources/: forks.c  (+12 more)
push_swap/: Makefile  push_swap
(+53 files in other folders)
